--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,14 @@
 version: '2.3'
 
+volumes:
+   restapi_db_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./data/db
+
+
 services:
   db:
     image: postgres:latest
@@ -7,7 +16,7 @@ services:
     env_file: 
       - .env
     volumes:
-      - ./data/db:/var/lib/postgresql/data/
+      - restapi_db_data:/var/lib/postgresql/data/
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
